Fix slight x-overflow on mobile from carousel (#836)

--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -104,12 +104,10 @@
     height: 3rem;
   }
 
-  .carousel-arrow.left-arrow {
-    left: -11px;
-  }
-
-  .carousel-arrow.right-arrow {
-    right: -11px;
+  @media (max-width: 495px) {
+    .carousel-arrow svg {
+      width: 2.75rem;
+    }
   }
 }
 
